force-app/main/default/objects/Protocol__c/fields/Arbitrator_not_responding_MM_Notificat__c.field-meta.xml
<CustomField>
    <fullName>Arbitrator_not_responding_MM_Notificat__c</fullName>
    <label>Arbitrator not responding - MM Notificat</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>