force-app/main/default/objects/Protocol__c/fields/Arbitrator_Notification_No_of_Days__c.field-meta.xml
<CustomField>
    <fullName>Arbitrator_Notification_No_of_Days__c</fullName>
    <label>Arbitrator Notification - No of Days</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>