force-app/main/default/objects/Protocol__c/fields/Arbitrator_Reminder__c.field-meta.xml
<CustomField>
    <fullName>Arbitrator_Reminder__c</fullName>
    <label>Arbitrator Reminder</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>