force-app/main/default/objects/Protocol__c/fields/Bilateral_referral_days__c.field-meta.xml
<CustomField>
    <fullName>Bilateral_referral_days__c</fullName>
    <label>Bilateral referral (days)</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>