force-app/main/default/objects/Protocol__c/fields/Cap_on_Amount__c.field-meta.xml
<CustomField>
    <fullName>Cap_on_Amount__c</fullName>
    <label>Cap on Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>