force-app/main/default/objects/Protocol__c/fields/Case_Protocol__c.field-meta.xml
<CustomField>
    <fullName>Case_Protocol__c</fullName>
    <formula>TEXT(Case_Type__r.Protocol_Option__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Protocol</label>
    <type>Text</type>
</CustomField>