force-app/main/default/objects/Protocol__c/fields/Case_Record_Type_ID__c.field-meta.xml
<CustomField>
    <fullName>Case_Record_Type_ID__c</fullName>
    <formula>Case_Type__r.Record_Type_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Record Type ID</label>
    <type>Text</type>
</CustomField>