force-app/main/default/objects/Protocol__c/fields/Case_Type__c.field-meta.xml
<CustomField>
    <fullName>Case_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case Type</label>
    <referenceTo>Protocol_Option__c</referenceTo>
    <relationshipLabel>Protocols (Case Type)</relationshipLabel>
    <relationshipName>Protocols3</relationshipName>
    <type>Lookup</type>
</CustomField>