force-app/main/default/objects/Protocol__c/fields/Claimant_Protocol__c.field-meta.xml
<CustomField>
    <fullName>Claimant_Protocol__c</fullName>
    <formula>TEXT(Claimant_Type__r.Protocol_Option__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Claimant Protocol</label>
    <type>Text</type>
</CustomField>