force-app/main/default/objects/Protocol__c/fields/Claimant_Record_Type_ID__c.field-meta.xml
<CustomField>
    <fullName>Claimant_Record_Type_ID__c</fullName>
    <formula>Claimant_Type__r.Record_Type_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Claimant Record Type ID</label>
    <type>Text</type>
</CustomField>