force-app/main/default/objects/Protocol__c/fields/Claimant_Type__c.field-meta.xml
<CustomField>
    <fullName>Claimant_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Claimant Type</label>
    <referenceTo>Protocol_Option__c</referenceTo>
    <relationshipLabel>Protocols</relationshipLabel>
    <relationshipName>Protocols</relationshipName>
    <type>Lookup</type>
</CustomField>