force-app/main/default/objects/Protocol__c/fields/Defendant_Protocol__c.field-meta.xml
<CustomField>
    <fullName>Defendant_Protocol__c</fullName>
    <formula>TEXT(  Defendant_type__r.Protocol_Option__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Defendant Protocol</label>
    <type>Text</type>
</CustomField>