force-app/main/default/objects/Protocol__c/fields/Defendant_Record_Type_ID__c.field-meta.xml
<CustomField>
    <fullName>Defendant_Record_Type_ID__c</fullName>
    <formula>Defendant_type__r.Record_Type_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Defendant Record Type ID</label>
    <type>Text</type>
</CustomField>