force-app/main/default/objects/Protocol__c/fields/Defendant_Supervisor_Reminder__c.field-meta.xml
<CustomField>
    <fullName>Defendant_Supervisor_Reminder__c</fullName>
    <label>Defendant Supervisor Reminder</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>