force-app/main/default/objects/Protocol__c/fields/Defendant_type__c.field-meta.xml
<CustomField>
    <fullName>Defendant_type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Defendant type</label>
    <referenceTo>Protocol_Option__c</referenceTo>
    <relationshipLabel>Protocols (Defendant type)</relationshipLabel>
    <relationshipName>Protocols1</relationshipName>
    <type>Lookup</type>
</CustomField>