force-app/main/default/objects/Protocol__c/fields/DH_not_responding_MM_Notification__c.field-meta.xml
<CustomField>
    <fullName>DH_not_responding_MM_Notification__c</fullName>
    <label>DH not responding - MM Notification</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>