force-app/main/default/objects/Protocol__c/fields/Doc_Prep_Duration__c.field-meta.xml
<CustomField>
    <fullName>Doc_Prep_Duration__c</fullName>
    <label>Doc Prep Duration</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>