force-app/main/default/objects/Protocol__c/fields/Doc_Prep_prior_Notification_days__c.field-meta.xml
<CustomField>
    <fullName>Doc_Prep_prior_Notification_days__c</fullName>
    <label>Doc Prep prior Notification (days)</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>