force-app/main/default/objects/Protocol__c/fields/Extention_Unilateral_days__c.field-meta.xml
<CustomField>
    <fullName>Extention_Unilateral_days__c</fullName>
    <label>Extention Unilateral (days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>