force-app/main/default/objects/Protocol__c/fields/Facilitator_Required__c.field-meta.xml
<CustomField>
    <fullName>Facilitator_Required__c</fullName>
    <label>Facilitator Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>