force-app/main/default/objects/Protocol__c/fields/Final_Offer_prior_Notification_days__c.field-meta.xml
<CustomField>
    <fullName>Final_Offer_prior_Notification_days__c</fullName>
    <label>Final Offer prior Notification (days)</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>