force-app/main/default/objects/Protocol__c/fields/Final_Offers_Duration__c.field-meta.xml
<CustomField>
    <fullName>Final_Offers_Duration__c</fullName>
    <label>Final Offers Duration</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>