force-app/main/default/objects/Protocol__c/fields/Incident_Protocol__c.field-meta.xml
<CustomField>
    <fullName>Incident_Protocol__c</fullName>
    <formula>TEXT(Incident_Type__r.Protocol_Option__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Incident Protocol</label>
    <type>Text</type>
</CustomField>