force-app/main/default/objects/Protocol__c/fields/Incident_Record_Type_ID__c.field-meta.xml
<CustomField>
    <fullName>Incident_Record_Type_ID__c</fullName>
    <formula>Incident_Type__r.Record_Type_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Incident Record Type ID</label>
    <type>Text</type>
</CustomField>