force-app/main/default/objects/Protocol__c/fields/Incident_Type__c.field-meta.xml
<CustomField>
    <fullName>Incident_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Incident Type</label>
    <referenceTo>Protocol_Option__c</referenceTo>
    <relationshipLabel>Protocols (Incident Type)</relationshipLabel>
    <relationshipName>Protocols2</relationshipName>
    <type>Lookup</type>
</CustomField>