force-app/main/default/objects/Protocol__c/fields/Mininmum_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Mininmum_Schedule__c</fullName>
    <label>Mininmum Schedule</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Merit Required</fullName>
            </value>
            <value>
                <fullName>Merit and Damages Required</fullName>
            </value>
            <value>
                <fullName>Loss Item &gt; 0</fullName>
                <isActive>false</isActive>
                <label>Loss Item &gt; 0</label>
            </value>
            <value>
                <fullName>None</fullName>
                <isActive>false</isActive>
                <label>None</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>