force-app/main/default/objects/Protocol__c/fields/No_referral_days__c.field-meta.xml
<CustomField>
    <fullName>No_referral_days__c</fullName>
    <label>No referral (days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>