force-app/main/default/objects/Protocol__c/fields/Validations__c.field-meta.xml
<CustomField>
    <fullName>Validations__c</fullName>
    <label>Validations</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Vehicle Reg required</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>