force-app/main/default/objects/Protocol__c/validationRules/Doc_Prep_and_Final_Duration_Greater_0.validationRule-meta.xml
<ValidationRule>
    <fullName>Doc_Prep_and_Final_Duration_Greater_0</fullName>
    <active>true</active>
    <errorConditionFormula>OR(Final_Offers_Duration__c=0,  Doc_Prep_Duration__c =0)</errorConditionFormula>
    <errorMessage>Doc Prep and Final Offers duration must both be greater than 0</errorMessage>
</ValidationRule>