force-app/main/default/objects/Protocol__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Case_Protocol__c</columns>
    <columns>Code__c</columns>
    <columns>Claimant_Type__c</columns>
    <columns>Case_Type__c</columns>
    <columns>Incident_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>